docs: added docs for booking and event service